kustomization/manifests/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "nginx-ingress"
    # ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  - host: "thanos"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: thanos-query
            port:
              number: 9090
  - host: "alert"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
  - host: "grafana"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000

  - host: "minio"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-service
            port:
              number: 9090
